--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ find_package(Threads)
 find_package(Curses)
 set(ADDITIONAL_LIBRARIES menu)
 
-add_executable(SO2_P3 main.cpp)
+add_executable(SO2_P3 main.cpp Objects/Car.cpp Objects/Car.h Objects/Passenger.cpp Objects/Passenger.h Objects/Airplane.cpp Objects/Airplane.h Objects/Guard.cpp Objects/Guard.h Objects/Gate.cpp Objects/Gate.h Scene.cpp Scene.h Sync.h)
 target_link_libraries(SO2_P3 Threads::Threads curses menu)
